--- a/map1/index.html
+++ b/map1/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css">
-    <link rel="stylesheet" href="car.css">
+    <link rel="stylesheet" href="map1.css">
   </head>
   <body>
     <div id="street"></div>
     <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
-    <script src="street.js"></script>
+    <script src="map1.js"></script>
   </body>
 </html>
