--- a/map1/index.html
+++ b/map1/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="map1.css">
   </head>
   <body>
-    <div id="street"></div>
+    <div id="map1"></div>
     <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
     <script src="map1.js"></script>
   </body>
